// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object Field Test: locationField 1`] = `
<div>
  <input
    oninput={[Function]}
    type="number"
  />
  <input
    oninput={[Function]}
    type="number"
  />
</div>
`;

exports[`Object Field Test: set to invalid 1`] = `
<div>
  <input
    oninput={[Function]}
    type="number"
    value="invalid"
  />
  <input
    oninput={[Function]}
    type="number"
  />
</div>
`;

exports[`Object Field Test: set to otherValidLocation 1`] = `
<div>
  <input
    oninput={[Function]}
    type="number"
    value={767}
  />
  <input
    oninput={[Function]}
    type="number"
  />
</div>
`;

exports[`Object Field Test: set to validLocation 1`] = `
<div>
  <input
    oninput={[Function]}
    type="number"
    value={41}
  />
  <input
    oninput={[Function]}
    type="number"
  />
</div>
`;
